--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,31 @@
-plugins {
-    id 'org.springframework.boot' version '2.1.6.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'java'
+buildscript {
+    ext {
+        springBootVersion = '2.1.6.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+        classpath 'com.h2database:h2:1.4.197'
+        classpath "gradle.plugin.com.boxfuse.client:gradle-plugin-publishing:6.0.6"
+    }
 }
 
+//plugins {
+//    id 'org.springframework.boot' version '2.1.6.RELEASE'
+//	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+//    id 'java'
+//}
+
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.junit.platform.gradle.plugin'
+apply plugin: "org.flywaydb.flyway"
 
 group = 'com.thoughtworks'
 version = '0.0.1-SNAPSHOT'
@@ -14,7 +35,18 @@ repositories {
     mavenCentral()
 }
 
+flyway {
+    url = 'jdbc:h2:file:./target/parkingLot'
+    user = 'sa'
+}
+
+
 dependencies {
+    compile 'org.springframework.boot:spring-boot-starter-actuator'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'com.h2database:h2'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	
